web-infras/parser/tests/fixtures/babel/es2015/uncategorised/332/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,19)
1|'use strict'; [...eval] = arr
 |                 ^
